--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ span {
 }
 
 .img {
-    width: 615px;
+    width: 100%;
     height: 9rem;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
